# Python-Dependency-Virtual-Environment-Managers

./: README.md  requirements.txt
conda-env/conda-meta/: history
conda-env/etc/: aau_token
flit-project/: LICENSE  pyproject.toml
hatch-project/: LICENSE.txt  README.md  pyproject.toml
hatch-project/src/hatch_project/: __about__.py
hatch-project/tests/: __init__.py
pixi-project/: pixi.toml
poetry/demo/: pyproject.toml  requirements.txt
uv/: pyproject.toml
