[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Md. Alahi Almin Tansen",email = "aatansen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
